# ai-eng-prep

./: .env.example  .gitignore  README.md  ROADMAP.md  docker-compose.yml  mcp_server.py  pyproject.toml
ai_engineering_prep.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: config.py  documents.py  embeddings.py  index.py  ingest.py  llm.py  logging_config.py  main.py  observability.py  pg_vector_store.py  retrieval.py  schemas.py  tools.py  trace_store.py  vector_store.py
data/docs/learning_notes/: project-overview.md  rag-notes.md  structured-output-notes.md
evals/: agent_dataset.json  rag_dataset.json  run_agent.py  run_rag.py
scripts/: ab_test.sh
tests/: test_documents.py  test_index.py  test_project_bootstrap.py  test_retrieval.py
