[project]
version = "0.1.0"
name = "ai-engineering-prep"
description = "Prep project to deepdive into AI Engineering: structured LLM calls, RAG, tools calling, evals, observability"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "rich>=13.7.1",
    "openai>=2.0.0",
    "tenacity>=9.0.0",
    "mcp[cli]>=1.28.0",
    "psycopg[binary]>=3.3.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
